Fix navbar alignment

--- a/Exercise_3/css/styles.css
+++ b/Exercise_3/css/styles.css
@@ -56,7 +56,11 @@ nav a {
 }
 
 .navbar > ul {
+    width: 400px;
     list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .navbar li > a {
